chore: start to compta

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workers-d1",
+  "name": "compta",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -11,9 +11,9 @@
     "db:check": "bun with-env drizzle-kit check",
     "db:studio:local": "bun with-env bun with-local-db drizzle-kit studio --config drizzle.local.config.ts",
     "db:studio:remote": "bun with-env drizzle-kit studio",
-    "d1:seed:remote": "wrangler d1 execute start --remote --file=./src/server/db/seed.sql",
-    "d1:migrate:local": "wrangler d1 migrations apply start --local",
-    "d1:migrate:remote": "wrangler d1 migrations apply start --remote",
+    "d1:seed:remote": "wrangler d1 execute compta --remote --file=./src/server/db/seed.sql",
+    "d1:migrate:local": "wrangler d1 migrations apply compta --local",
+    "d1:migrate:remote": "wrangler d1 migrations apply compta --remote",
     "dev": "bun with-env next dev",
     "dev:local": "bun with-env next dev",
     "build": "bun with-env next build && bun with-env npx @opennextjs/cloudflare build --skip-build",
