--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,7 +6,7 @@
   "$schema": "./node_modules/wrangler/config-schema.json",
   // For more details on how to configure Wrangler, refer to:
   // https://developers.cloudflare.com/workers/wrangler/configuration/
-  "name": "start",
+  "name": "compta",
   "main": ".open-next/worker.js",
   "compatibility_date": "2024-09-26",
   "compatibility_flags": ["nodejs_compat"],
@@ -18,7 +18,7 @@
   "d1_databases": [
     {
       "binding": "DB",
-      "database_name": "start",
+      "database_name": "compta",
       "database_id": "ed92b55e-279e-4add-9591-767196475c39",
     },
   ],
@@ -29,7 +29,7 @@
   "workers_dev": false,
   "routes": [
     {
-      "pattern": "start.jules.graphics",
+      "pattern": "compta.jules.graphics",
       "custom_domain": true,
     },
   ],
