feat: first deployment

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "d1:migrate:remote": "wrangler d1 migrations apply compta --remote",
     "dev": "bun with-env next dev",
     "dev:local": "bun with-env next dev",
-    "build": "bun with-env next build && bun with-env npx @opennextjs/cloudflare build --skip-build",
+    "build": "bun with-env next build && bun with-env bun run opennextjs-cloudflare build --skip-build",
     "lint": "bun with-env next lint",
     "dev:worker": "wrangler dev",
-    "build:worker": "bun build && bun with-env npx @opennextjs/cloudflare build --skip-build",
+    "build:worker": "bun with-env next build && bun with-env bun run opennextjs-cloudflare build --skip-build",
     "preview": "bun build:worker && wrangler dev",
     "deploy": "bun build:worker && wrangler deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
@@ -54,7 +54,7 @@
     "drizzle-orm": "^0.45.1",
     "geist": "^1.5.1",
     "lucide-react": "^0.562.0",
-    "next": "16.1.1",
+    "next": "16.0.10",
     "react": "^19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
